--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,13 @@ header .container {
   margin: 0 auto;
   padding: 60px 0;
   /* background: pink; */
+  position: relative;
+}
+
+header img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .btn {
