--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,23 @@ body {
   color: #333;
 }
 
-header {
+.container {
+  width: 820px;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+
+.orange-bg {
   color: #fff;
   background: url(../img/bg.png);
   background-size: cover;
-  margin: 0;
 }
+
+/* header */
+
+/* header {
+  margin: 0;
+} */
 
 header h1 {
   margin-top: 0;
@@ -24,9 +35,6 @@ header p {
 }
 
 header .container {
-  width: 820px;
-  margin: 0 auto;
-  padding: 60px 0;
   /* background: pink; */
   position: relative;
 }
