Make styles reusable commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,20 @@ body {
   background-size: cover;
 }
 
+.section-title {
+  text-align: center;
+  font-weight: normal;
+  font-size: 24px;
+}
+
+.section-title::after {
+  content: attr(data-subtitle);
+  display: block;
+  font-size: 16px;
+  color: #aaa;
+  padding-top: 10px;
+}
+
 /* header */
 
 /* header {
@@ -60,3 +74,5 @@ header img {
 .btn:hover {
   opacity: 1.0;
 }
+
+/* features */
