--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,25 @@ header img {
 .voices {
   background: #f8f8f8;
 }
+
+/* 横並びで要素間均等 */
+.voices .flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.voice {
+  width: 250px;
+  background: #fff;
+  position: relative;
+}
+
+/* 丸くして中央揃え */
+.voice img {
+  border-radius: 50%;
+  border: 10px solid #fff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
