Last section commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,3 +151,13 @@ header img {
 .voices .section-title {
   margin-bottom: 95px;
 }
+
+/* call-to-action */
+
+.call-to-action {
+  text-align: center;
+}
+
+.call-to-action .section-title {
+  margin-bottom: 15px;
+}
