--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,22 @@ body {
   padding-top: 10px;
 }
 
+.btn {
+  display: inline-block;
+  width: 290px;
+  background: #fff;
+  color: #f39800;
+  text-align: center;
+  text-decoration: none;
+  padding: 8px 0;
+  border-radius: 5px;
+  opacity: 0.9;
+}
+
+.btn:hover {
+  opacity: 1.0;
+}
+
 /* header */
 
 /* header {
@@ -59,22 +75,6 @@ header img {
   position: absolute;
   bottom: 0;
   right: 0;
-}
-
-.btn {
-  display: inline-block;
-  width: 290px;
-  background: #fff;
-  color: #f39800;
-  text-align: center;
-  text-decoration: none;
-  padding: 8px 0;
-  border-radius: 5px;
-  opacity: 0.9;
-}
-
-.btn:hover {
-  opacity: 1.0;
 }
 
 /* features */
@@ -160,4 +160,12 @@ header img {
 
 .call-to-action .section-title {
   margin-bottom: 15px;
+}
+
+/* footer */
+
+footer {
+  padding: 40px 0;
+  text-align: center;
+  color: #aaa;
 }
